# xf316

./: README.md
minigui/: LICENSE  build.sh  build_sdv.sh  configure  configure.in  guide.txt  mgconfig.h.in  support_trackbar_sledit_listbox.patch
minigui/include/: common.h  customial.h  drv_display.h  g2d.h
minigui/include/ctrl/: button.h
minigui/src/: Makefile.am
minigui/src/control/: Makefile.am  button.c  listmodel.c  scrollbar.c  scrolled.h  scrollview.c  static.c
minigui/src/ex_ctrl/: Makefile.am  gif89a.c  iconview.c  iconview_impl.h  listview.c  listview_impl.h
minigui/src/font/: Makefile.am  charset.c  charset.h  devfont.c  font-engines.c  mapunitogb.c  sunxi_mapunitoeuckr.c  textops.c
minigui/src/font/in-core/: Makefile.am
minigui/src/gui/: Makefile.am  keyboard.h  lf_classic.c  window.c
minigui/src/ial/: Makefile.am  ial.c  sunxikey.h  sunxikeytslib.c  sunxikeytslib.h  tslibial.c
minigui/src/include/: dc.h  devfont.h  newgal.h  zorder.h
minigui/src/kernel/: Makefile.am  cursor.c  desktop-comm.c  desktop-ths.c  desktop.c  event.c  init.c
minigui/src/misc/: Makefile.am  misc.c
minigui/src/mybmp/: Makefile.am  jpeg.c  mybmp.c  png.c
minigui/src/newgal/: Makefile.am  newgal.c  sysvideo.h  video.c
minigui/src/newgal/fbcon/: fbvideo.c  fbvideo.h  pci_smi.c
minigui/src/newgal/shadow/: shadow.c
minigui/src/newgal/sunxi/: Makefile.am  hwmem.c  hwmem.h  ion.h  ion_alloc.c  ion_alloc.h  sunxi.c  sunxi.h  sunxi_alloc.c
minigui/src/newgdi/: Makefile.am  advapi.c  bidi.c  drawtext.c  drawtext.h  gdi.c  glyph.c  line.c  readbmp.c  region.c  textout.c
minigui/src/sysres/: Makefile.am
